--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     .logo img { width: 220px; margin-bottom: 30px; }
     h1 { color: #f97316; margin-bottom: 40px; }
-    .buttons { display: flex; gap: 20px; flex-wrap: wrap; }
+    .buttons { display: flex; gap: 20px; flex-wrap: wrap; justify-content: center; }
     .btn {
       padding: 14px 24px;
       border-radius: 12px;
@@ -65,6 +65,7 @@
   <div class="buttons">
     <a class="btn" href="zakupy.html">🛒 Zakupy</a>
     <a class="btn" href="regulamin.html">🛡️ Regulamin</a>
+    <a class="btn" href="galeria.html">📸 Galeria – Pierwsza edycja</a>
   </div>
 
   <!-- Social media -->
@@ -80,5 +81,6 @@
     </a>
   </div>
 </body>
-</html>
+
+
 
