--- a/galeria.html
+++ b/galeria.html
@@ -114,13 +114,13 @@
   <h1>📸 Galeria – Pierwsza edycja</h1>
 
   <div class="gallery">
-    <img src="zdjecia/ceroteam.png" alt="CeroTeam">
-    <img src="zdjecia/gruszki.png" alt="Gruszki">
-    <img src="zdjecia/lol.png" alt="LOL">
+    <img src="zdjecia/ceroteam.png" alt="ceroteam">
+    <img src="zdjecia/gruszki.png" alt="gruszki">
+    <img src="zdjecia/lol.png" alt="lol">
     <img src="zdjecia/underTV.png" alt="underTV">
-    <img src="zdjecia/zx9.png" alt="ZX9">
-    <img src="zdjecia/bigmen.png" alt="BigMen">
-    <img src="zdjecia/casyno.png" alt="Casyno">
+    <img src="zdjecia/zx9.png" alt="zx9">
+    <img src="zdjecia/bigmen.png" alt="bigmen">
+    <img src="zdjecia/casyno.png" alt="casyno">
     <img src="zdjecia/777.png" alt="777">
   </div>
 
