--- a/zakupy.html
+++ b/zakupy.html
@@ -7,7 +7,7 @@
   <style>
     :root {
       --bg: #0d0d0d;
-      --card: #1a1a1a;
+      --card: rgba(26,26,26,0.85);
       --accent: #f97316;
       --accent-light: #fb923c;
       --muted: #cbd5e1;
@@ -18,25 +18,52 @@
       margin: 0;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial;
       color: #f1f5f9;
-      background: linear-gradient(180deg, #0d0d0d 0%, #1e1e1e 100%);
-      -webkit-font-smoothing: antialiased;
       position: relative;
       min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 24px;
+      text-align: center;
+      overflow: hidden;
     }
-    .container { max-width: 980px; margin: 36px auto; padding: 24px; }
-    header { display: flex; gap: 16px; align-items: center; }
+
+    /* Tło ze zdjęciem i blur */
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('zdjecia/casyno.png') no-repeat center center / cover;
+      filter: blur(8px);
+      z-index: -2;
+    }
+
+    /* Ciemny overlay dla lepszej czytelności */
+    body::after {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: -1;
+    }
+
+    .container { max-width: 980px; margin: 36px auto; padding: 24px; background: var(--card); border-radius: 14px; }
+    header { display: flex; gap: 16px; align-items: center; justify-content: center; flex-wrap: wrap; }
     .logo img { width: 140px; height: auto; }
     h1 { margin: 0; font-size: 24px; color: var(--accent); }
     p.lead { margin: 6px 0 18px; color: var(--muted); }
-    .card {
-      background: var(--card);
-      padding: 20px;
-      border-radius: 14px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.6);
-      margin-top: 24px;
-    }
+
+    .card { padding: 20px; border-radius: 14px; }
     h2 { color: var(--accent-light); margin-top: 0; }
-    .methods { display: flex; flex-wrap: wrap; gap: 12px; margin: 10px 0; }
+
+    .methods { display: flex; flex-wrap: wrap; gap: 12px; margin: 10px 0; justify-content: center; }
     .method {
       background: rgba(255,255,255,0.05);
       padding: 10px 14px;
@@ -46,12 +73,14 @@
       align-items: center;
     }
     .method .emoji { font-size: 20px; }
+
     .note {
       margin: 12px 0;
       padding: 12px;
       border-left: 4px solid var(--accent);
       background: rgba(249,115,22,0.1);
     }
+
     .prices {
       display: grid;
       grid-template-columns: repeat(auto-fit,minmax(140px,1fr));
@@ -66,7 +95,8 @@
     }
     .price-card h3 { margin: 6px 0; font-size: 16px; color: var(--accent-light); }
     .price { font-weight: 700; font-size: 18px; color: var(--accent); }
-    .cta { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 16px; }
+
+    .cta { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 16px; justify-content: center; }
     .btn {
       padding: 10px 14px;
       border-radius: 10px;
@@ -77,13 +107,27 @@
       transition: background 0.2s;
     }
     .btn:hover { background: var(--accent-light); }
+
+    .btn.tipply {
+      background: #f97316;
+      color: #fff;
+    }
+    .btn.tipply:hover { background: #fb923c; }
+
     .btn.ghost {
       background: transparent;
       border: 1px solid rgba(255,255,255,0.2);
       color: var(--muted);
     }
 
-    /* Social media w prawym dolnym rogu */
+    /* Stopka */
+    .footer {
+      margin-top: 40px;
+      font-size: 14px;
+      color: rgba(241, 245, 249, 0.7);
+    }
+
+    /* Social media */
     .socials {
       position: fixed;
       bottom: 20px;
@@ -108,7 +152,7 @@
     .socials span { font-size: 18px; }
 
     @media (max-width:600px) {
-      header { flex-direction: column; align-items: flex-start; }
+      header { flex-direction: column; align-items: center; }
       .logo img { width: 110px; }
     }
   </style>
@@ -130,11 +174,11 @@
       <div class="methods">
         <div class="method"><span class="emoji">💸</span><strong>BLIK</strong></div>
         <div class="method"><span class="emoji">💳</span><strong>Paysafecard (PSC)</strong></div>
-        <div class="method"><span class="emoji">💰</span><strong>Donejt:</strong> <a href="https://tipply.pl/@vemsiak" target="_blank" rel="noopener noreferrer">tipply.pl/@vemsiak</a></div>
+        <div class="method"><span class="emoji">💰</span><strong>Tipply</strong></div>
       </div>
 
       <div class="note">
-        ⚠️ <strong>Grając na serwerze akceptujesz regulamin i obowiązujące zasady. Dbaj o kulturę i szacunek wobec innych.</strong>
+        ⚠️ <strong>Wszystkie zakupy muszą być dokonywane odpowiedzialnie. Dbaj o kulturę i przestrzegaj zasad serwera.</strong>
       </div>
 
       <div class="note">
@@ -152,12 +196,15 @@
       </div>
 
       <div class="cta">
-        <a class="btn" href="https://discord.gg/U7WXRhmKNd" target="_blank" rel="noopener noreferrer">
-          💬 Skontaktuj się z administracją
-        </a>
-        <a class="btn ghost" href="https://tipply.pl/@vemsiak" target="_blank" rel="noopener noreferrer">Przejdź do Tipply</a>
-        <a class="btn ghost" href="index.html">Powrót do strony głównej</a>
+        <a class="btn" href="https://discord.gg/U7WXRhmKNd" target="_blank" rel="noopener noreferrer">💬 Skontaktuj się z administracją</a>
+        <a class="btn tipply" href="https://tipply.pl/@vemsiak" target="_blank" rel="noopener noreferrer">💰 Tipply</a>
+        <a class="btn ghost" href="index.html">⬅️ Powrót do strony głównej</a>
       </div>
+    </div>
+
+    <!-- Stopka -->
+    <div class="footer">
+      ip-legends.pl | wersja 1.21.5+
     </div>
   </div>
 
@@ -169,3 +216,4 @@
   </div>
 </body>
 </html>
+
