--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
     }
     .socials a:hover { background: rgba(255,255,255,0.1); }
     .socials span { font-size: 18px; }
+
+    /* Stopka z informacjami o serwerze i wersji */
+    .footer {
+      margin-top: 40px;
+      font-size: 14px;
+      color: rgba(241, 245, 249, 0.7);
+    }
   </style>
 </head>
 <body>
@@ -94,6 +101,11 @@
     <a class="btn" href="regulamin.html">🛡️ Regulamin</a>
     <a class="btn" href="galeria.html">📸 Galeria – Pierwsza edycja</a>
     <a class="btn" href="news.html">📰 News</a>
+  </div>
+
+  <!-- Stopka z adresem IP i wersją -->
+  <div class="footer">
+    ip-legends.pl | wersja 1.21.5+
   </div>
 
   <!-- Social media -->
@@ -110,6 +122,7 @@
   </div>
 </body>
 </html>
+
 
 
 
