--- a/zakupy.html
+++ b/zakupy.html
@@ -198,7 +198,7 @@
       <div class="cta">
         <a class="btn" href="https://discord.gg/U7WXRhmKNd" target="_blank" rel="noopener noreferrer">💬 Skontaktuj się z administracją</a>
         <a class="btn tipply" href="https://tipply.pl/@vemsiak" target="_blank" rel="noopener noreferrer">💰 Tipply</a>
-        <a class="btn ghost" href="index.html">⬅️ Powrót do strony głównej</a>
+        <a class="btn ghost" href="index.html"> Powrót do strony głównej</a>
       </div>
     </div>
 
@@ -216,4 +216,5 @@
   </div>
 </body>
 </html>
+
 
