--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Legends Risings</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
+
   <style>
     body {
       margin: 0;
@@ -122,6 +126,7 @@
   </div>
 </body>
 </html>
+
 
 
 
