--- a/zakupy.html
+++ b/zakupy.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Legends Risings — Zakupy</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
+
   <style>
     :root {
       --bg: #0d0d0d;
@@ -198,7 +202,7 @@
       <div class="cta">
         <a class="btn" href="https://discord.gg/U7WXRhmKNd" target="_blank" rel="noopener noreferrer">💬 Skontaktuj się z administracją</a>
         <a class="btn tipply" href="https://tipply.pl/@vemsiak" target="_blank" rel="noopener noreferrer">💰 Tipply</a>
-        <a class="btn ghost" href="index.html"> Powrót do strony głównej</a>
+        <a class="btn ghost" href="index.html">⬅️ Powrót do strony głównej</a>
       </div>
     </div>
 
@@ -216,5 +220,9 @@
   </div>
 </body>
 </html>
+
+
+
+
 
 
