--- a/regulamin.html
+++ b/regulamin.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Legends Risings — Regulamin</title>
+  <link rel="icon" type="image/png" href="logo.png" />
   <style>
     :root {
       --bg: #0d0d0d;
@@ -68,8 +69,6 @@
       transition: background 0.2s;
     }
     .btn.ghost:hover { background: rgba(255,255,255,0.1); }
-
-    /* Social media w prawym dolnym rogu */
     .socials {
       position: fixed;
       bottom: 20px;
@@ -92,7 +91,6 @@
     }
     .socials a:hover { background: rgba(255,255,255,0.1); }
     .socials span { font-size: 18px; }
-
     @media (max-width:600px) {
       header { flex-direction: column; align-items: flex-start; }
       .logo img { width: 110px; }
@@ -128,18 +126,19 @@
         <li><span class="emoji">🧠</span> Nie podszywaj się pod administrację, innych graczy, youtuberów itd.</li>
         <li><span class="emoji">📜</span> Grając na serwerze, akceptujesz ten regulamin i jego postanowienia.</li>
       </ul>
-
       <div class="cta">
-        <a class="btn ghost" href="index.html">Powrót do strony głównej</a>
+        <a class="btn ghost" href="index.html">⬅️ Powrót do strony głównej</a>
       </div>
     </div>
   </div>
 
-  <!-- Social media -->
   <div class="socials">
-    <a href="https://discord.gg/U7WXRhmKNd" target="_blank" rel="noopener noreferrer"><span>💬</span> Discord</a>
-    <a href="https://www.youtube.com/@LegendsRisings" target="_blank" rel="noopener noreferrer"><span>▶️</span> YouTube</a>
-    <a href="https://www.tiktok.com/@legends_risings" target="_blank" rel="noopener noreferrer"><span>🎵</span> TikTok</a>
+    <a href="https://discord.gg/U7WXRhmKNd" target="_blank"><span>💬</span> Discord</a>
+    <a href="https://www.youtube.com/@LegendsRisings" target="_blank"><span>▶️</span> YouTube</a>
+    <a href="https://www.tiktok.com/@legends_risings" target="_blank"><span>🎵</span> TikTok</a>
   </div>
 </body>
 </html>
+
+
+
