--- a/galeria.html
+++ b/galeria.html
@@ -128,7 +128,7 @@
     <img src="zdjecia/777.png" alt="777">
   </div>
 
-  <a class="btn ghost" href="index.html">Powrót do strony głównej</a>
+  <a class="btn ghost" href="index.html">⬅️Powrót do strony głównej</a>
 
   <!-- Modal -->
   <div class="modal" id="modal">
@@ -199,6 +199,7 @@
   </script>
 </body>
 </html>
+
 
 
 
