--- a/zakupy.html
+++ b/zakupy.html
@@ -129,6 +129,7 @@
       margin-top: 40px;
       font-size: 14px;
       color: rgba(241, 245, 249, 0.7);
+      text-align: center;
     }
 
     /* Social media */
@@ -182,7 +183,7 @@
       </div>
 
       <div class="note">
-        ⚠️ <strong>Wszystkie zakupy muszą być dokonywane odpowiedzialnie. Dbaj o kulturę i przestrzegaj zasad serwera.</strong>
+       ⚠️ <strong>Wszystkie zakupy muszą być dokonywane odpowiedzialnie. Dbaj o kulturę i przestrzegaj zasad serwera.</strong>
       </div>
 
       <div class="note">
@@ -205,11 +206,11 @@
         <a class="btn ghost" href="index.html">⬅️ Powrót do strony głównej</a>
       </div>
     </div>
+  </div>
 
-    <!-- Stopka -->
-    <div class="footer">
-      ip-legends.pl | wersja 1.21.5+
-    </div>
+  <!-- Stopka -->
+  <div class="footer">
+    ip-legends.pl | wersja 1.21.5+
   </div>
 
   <!-- Social media -->
@@ -220,6 +221,7 @@
   </div>
 </body>
 </html>
+
 
 
 
