--- a/galeria.html
+++ b/galeria.html
@@ -1,112 +1,166 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Galeria – Pierwsza edycja | Legends Risings</title>
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="logo.png">
+  <link rel="icon" type="image/png" href="logo.png" />
 
   <style>
+    :root {
+      --card: rgba(26,26,26,0.85);
+      --accent: #f97316;
+      --accent-light: #fb923c;
+      --muted: #cbd5e1;
+      color-scheme: dark;
+    }
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
-      background: linear-gradient(180deg, #0d0d0d 0%, #1e1e1e 100%);
       color: #f1f5f9;
       min-height: 100vh;
-      padding: 20px;
+      display: flex;
+      flex-direction: column;
       text-align: center;
+      padding: 24px;
     }
-    h1 { color: #f97316; margin-bottom: 30px; }
+
+    /* Tło z blur */
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: url('zdjecia/2.png') no-repeat center center / cover;
+      filter: blur(8px);
+      z-index: -2;
+    }
+    body::after {
+      content: '';
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: -1;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 36px auto;
+      padding: 24px;
+      background: var(--card);
+      border-radius: 14px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    h1 { color: var(--accent); margin-bottom: 30px; }
+
+    /* GALERIA */
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      grid-template-columns: repeat(3, 1fr); /* 3 w rzędzie na desktopie */
       gap: 16px;
-      max-width: 1200px;
-      margin: 0 auto;
+      margin-bottom: 24px;
     }
     .gallery img {
       width: 100%;
+      height: 220px;
+      object-fit: cover;
       border-radius: 12px;
       cursor: pointer;
       transition: transform 0.2s;
     }
     .gallery img:hover { transform: scale(1.05); }
 
+    /* Tablet */
+    @media (max-width: 900px) {
+      .gallery {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    /* Telefon */
+    @media (max-width: 600px) {
+      .gallery {
+        grid-template-columns: 1fr;
+      }
+    }
+
     /* Modal */
     .modal {
       display: none;
       position: fixed;
       z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
       background: rgba(0,0,0,0.85);
       align-items: center;
       justify-content: center;
       flex-direction: column;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+    .modal.show {
+      display: flex;
+      opacity: 1;
     }
     .modal img {
-      max-width: 90%;
-      max-height: 80%;
+      max-width: 90%; max-height: 80%;
       border-radius: 12px;
       box-shadow: 0 0 20px rgba(0,0,0,0.8);
+      transition: transform 0.3s ease;
+      transform: scale(0.8);
+    }
+    .modal.show img {
+      transform: scale(1);
     }
     .close { position: absolute; top: 20px; right: 30px; font-size: 40px; color: #fff; cursor: pointer; }
     .nav-btn {
-      position: absolute;
-      top: 50%;
+      position: absolute; top: 50%;
       transform: translateY(-50%);
-      font-size: 50px;
-      color: #fff;
-      cursor: pointer;
-      user-select: none;
-      padding: 10px;
+      font-size: 50px; color: #fff;
+      cursor: pointer; user-select: none; padding: 10px;
     }
     .prev { left: 40px; }
     .next { right: 40px; }
 
-    /* Przycisk powrotu */
     .btn {
       display: inline-block;
-      margin-top: 30px;
+      margin-top: 20px;
       padding: 14px 24px;
       border-radius: 12px;
-      background: #f97316;
+      background: var(--accent);
       color: #fff;
       font-weight: 600;
       text-decoration: none;
-      transition: background 0.2s, color 0.2s;
+      transition: background 0.2s;
     }
-    .btn:hover { background: #fb923c; }
+    .btn:hover { background: var(--accent-light); }
     .btn.ghost {
       background: transparent;
-      border: 2px solid #888888;
-      color: #888888;
+      border: 2px solid rgba(255,255,255,0.2);
+      color: #f1f5f9;
     }
-    .btn.ghost:hover { background: #888888; color: #fff; }
+    .btn.ghost:hover { background: rgba(255,255,255,0.2); color: #fff; }
 
-    /* Social media */
+    .footer {
+      margin-top: auto;
+      font-size: 14px;
+      color: var(--muted);
+    }
+
     .socials {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
+      position: fixed; bottom: 20px; right: 20px;
+      display: flex; flex-direction: column; gap: 12px;
       z-index: 1001;
     }
     .socials a {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      padding: 10px 14px;
-      border-radius: 10px;
+      display: flex; align-items: center; gap: 6px;
+      padding: 10px 14px; border-radius: 10px;
       background: rgba(255,255,255,0.05);
-      color: #f1f5f9;
-      text-decoration: none;
+      color: #f1f5f9; text-decoration: none;
       font-weight: 600;
       transition: background 0.2s;
     }
@@ -115,20 +169,27 @@
   </style>
 </head>
 <body>
-  <h1>📸 Galeria – Pierwsza edycja</h1>
+  <div class="container">
+    <h1>📸 Galeria – Pierwsza edycja</h1>
 
-  <div class="gallery">
-    <img src="zdjecia/ceroteam.png" alt="CeroTeam">
-    <img src="zdjecia/gruszki.png" alt="Gruszki">
-    <img src="zdjecia/lol.png" alt="LOL">
-    <img src="zdjecia/underTV.png" alt="underTV">
-    <img src="zdjecia/zx9.png" alt="ZX9">
-    <img src="zdjecia/bigmen.png" alt="BigMen">
-    <img src="zdjecia/casyno.png" alt="Casyno">
-    <img src="zdjecia/777.png" alt="777">
+    <div class="gallery">
+      <img src="zdjecia/smalben.png" alt="Smalben" loading="lazy">
+      <img src="zdjecia/ceroteam.png" alt="CeroTeam" loading="lazy">
+      <img src="zdjecia/gruszki.png" alt="Gruszki" loading="lazy">
+      <img src="zdjecia/lol.png" alt="LOL" loading="lazy">
+      <img src="zdjecia/underTV.png" alt="underTV" loading="lazy">
+      <img src="zdjecia/zx9.png" alt="ZX9" loading="lazy">
+      <img src="zdjecia/bigmen.png" alt="BigMen" loading="lazy">
+      <img src="zdjecia/casyno.png" alt="Casyno" loading="lazy">
+      <img src="zdjecia/777.png" alt="777" loading="lazy">
+    </div>
+
+    <a class="btn ghost" href="index.html">⬅️ Powrót do strony głównej</a>
   </div>
 
-  <a class="btn ghost" href="index.html">⬅️Powrót do strony głównej</a>
+  <div class="footer">
+    ip-legends.pl | wersja 1.21.5+
+  </div>
 
   <!-- Modal -->
   <div class="modal" id="modal">
@@ -138,17 +199,10 @@
     <span class="nav-btn next" id="next">▶</span>
   </div>
 
-  <!-- Social media -->
   <div class="socials">
-    <a href="https://discord.gg/U7WXRhmKNd" target="_blank" rel="noopener noreferrer">
-      <span>💬</span> Discord
-    </a>
-    <a href="https://www.youtube.com/@LegendsRisings" target="_blank" rel="noopener noreferrer">
-      <span>▶️</span> YouTube
-    </a>
-    <a href="https://www.tiktok.com/@legends_risings" target="_blank" rel="noopener noreferrer">
-      <span>🎵</span> TikTok
-    </a>
+    <a href="https://discord.gg/U7WXRhmKNd" target="_blank" rel="noopener noreferrer"><span>💬</span> Discord</a>
+    <a href="https://www.youtube.com/@LegendsRisings" target="_blank" rel="noopener noreferrer"><span>▶️</span> YouTube</a>
+    <a href="https://www.tiktok.com/@legends_risings" target="_blank" rel="noopener noreferrer"><span>🎵</span> TikTok</a>
   </div>
 
   <script>
@@ -163,8 +217,14 @@
 
     function openModal(index) {
       currentIndex = index;
+      modal.classList.add('show');
       modal.style.display = "flex";
       modalImg.src = images[currentIndex].src;
+    }
+
+    function closeModal() {
+      modal.classList.remove('show');
+      modal.style.display = "none";
     }
 
     function showNext() {
@@ -177,28 +237,23 @@
       modalImg.src = images[currentIndex].src;
     }
 
-    images.forEach((img, index) => {
-      img.addEventListener("click", () => openModal(index));
-    });
+    images.forEach((img, index) => img.addEventListener("click", () => openModal(index)));
 
-    closeBtn.onclick = () => { modal.style.display = "none"; }
+    closeBtn.onclick = closeModal;
     nextBtn.onclick = showNext;
     prevBtn.onclick = showPrev;
-
-    modal.onclick = (e) => {
-      if (e.target === modal) modal.style.display = "none";
-    }
-
+    modal.onclick = (e) => { if(e.target === modal) closeModal(); };
     document.addEventListener("keydown", (e) => {
-      if (modal.style.display === "flex") {
-        if (e.key === "ArrowRight") showNext();
-        if (e.key === "ArrowLeft") showPrev();
-        if (e.key === "Escape") modal.style.display = "none";
+      if(modal.style.display === "flex") {
+        if(e.key === "ArrowRight") showNext();
+        if(e.key === "ArrowLeft") showPrev();
+        if(e.key === "Escape") closeModal();
       }
     });
   </script>
 </body>
 </html>
+
 
 
 
