--- a/galeria.html
+++ b/galeria.html
@@ -188,7 +188,7 @@
   </div>
 
   <div class="footer">
-    ip-legends.pl | wersja 1.21.5+
+    ip-legendsrising.pl | wersja 1.21.5+
   </div>
 
   <!-- Modal -->
@@ -253,6 +253,7 @@
   </script>
 </body>
 </html>
+
 
 
 
