--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <!-- Stopka z adresem IP i wersją -->
   <div class="footer">
-    ip-legends.pl | wersja 1.21.5+
+    ip-legendsrising.pl | wersja 1.21.5+
   </div>
 
   <!-- Social media -->
@@ -126,6 +126,7 @@
   </div>
 </body>
 </html>
+
 
 
 
