--- a/news.html
+++ b/news.html
@@ -150,7 +150,7 @@
   </div>
 
   <div class="footer">
-    ip-legends.pl | wersja 1.21.5+
+    ip-legendsrising.pl | wersja 1.21.5+
   </div>
 
   <div class="socials">
@@ -160,4 +160,5 @@
   </div>
 </body>
 </html>
+
 
