--- a/regulamin.html
+++ b/regulamin.html
@@ -171,7 +171,7 @@
 
     <!-- Stopka -->
     <div class="footer">
-      ip-legends.pl | wersja 1.21.5+
+      ip-legendsrising.pl | wersja 1.21.5+
     </div>
   </div>
 
@@ -182,6 +182,7 @@
   </div>
 </body>
 </html>
+
 
 
 
