--- a/zakupy.html
+++ b/zakupy.html
@@ -210,7 +210,7 @@
 
   <!-- Stopka -->
   <div class="footer">
-    ip-legends.pl | wersja 1.21.5+
+    ip-legendsrising.pl | wersja 1.21.5+
   </div>
 
   <!-- Social media -->
@@ -221,6 +221,7 @@
   </div>
 </body>
 </html>
+
 
 
 
