--- a/zakupy.html
+++ b/zakupy.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Legends Risings — Zakupy</title>
 
-  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
   <style>
@@ -17,12 +16,13 @@
       --muted: #cbd5e1;
       color-scheme: dark;
     }
+
     * { box-sizing: border-box; }
+
     body {
       margin: 0;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial;
       color: #f1f5f9;
-      position: relative;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
@@ -30,44 +30,82 @@
       justify-content: flex-start;
       padding: 24px;
       text-align: center;
-      overflow: hidden;
+      /* 🔧 zmiana: pozwalamy przewijać */
+      overflow-y: auto;
+      overflow-x: hidden;
     }
 
-    /* Tło ze zdjęciem i blur */
+    /* Rozmyte tło */
     body::before {
       content: '';
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      inset: 0;
       background: url('zdjecia/casyno.png') no-repeat center center / cover;
       filter: blur(8px);
       z-index: -2;
     }
 
-    /* Ciemny overlay dla lepszej czytelności */
+    /* Przyciemnienie */
     body::after {
       content: '';
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.5);
+      inset: 0;
+      background: linear-gradient(rgba(0,0,0,0.25), rgba(0,0,0,0.45));
+      backdrop-filter: blur(1.5px);
       z-index: -1;
     }
 
-    .container { max-width: 980px; margin: 36px auto; padding: 24px; background: var(--card); border-radius: 14px; }
-    header { display: flex; gap: 16px; align-items: center; justify-content: center; flex-wrap: wrap; }
-    .logo img { width: 140px; height: auto; }
-    h1 { margin: 0; font-size: 24px; color: var(--accent); }
+    .container {
+      max-width: 980px;
+      margin: 36px auto 80px; /* 🔧 większy dół żeby footer się mieścił */
+      padding: 24px;
+      background: var(--card);
+      border-radius: 14px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.6);
+      animation: fadeIn 0.6s ease;
+    }
+
+    header {
+      display: flex;
+      gap: 16px;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-bottom: 12px;
+    }
+
+    /* Efekt hover na logo */
+    .logo img {
+      width: 140px;
+      height: auto;
+      transition: all 0.4s ease;
+      cursor: pointer;
+    }
+
+    .logo img:hover {
+      transform: scale(1.08) rotate(2deg);
+      filter: brightness(1.15) drop-shadow(0 0 15px rgba(249,115,22,0.4));
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 26px;
+      color: var(--accent);
+    }
+
     p.lead { margin: 6px 0 18px; color: var(--muted); }
 
     .card { padding: 20px; border-radius: 14px; }
     h2 { color: var(--accent-light); margin-top: 0; }
 
-    .methods { display: flex; flex-wrap: wrap; gap: 12px; margin: 10px 0; justify-content: center; }
+    .methods {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      margin: 10px 0;
+      justify-content: center;
+    }
+
     .method {
       background: rgba(255,255,255,0.05);
       padding: 10px 14px;
@@ -76,6 +114,7 @@
       gap: 10px;
       align-items: center;
     }
+
     .method .emoji { font-size: 20px; }
 
     .note {
@@ -83,56 +122,101 @@
       padding: 12px;
       border-left: 4px solid var(--accent);
       background: rgba(249,115,22,0.1);
+      border-radius: 8px;
+      line-height: 1.5;
     }
 
+    /* --- RANGI --- */
     .prices {
       display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(140px,1fr));
-      gap: 12px;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 16px;
       margin-top: 14px;
+      justify-items: center;
     }
+
     .price-card {
       background: rgba(255,255,255,0.03);
-      padding: 14px;
+      padding: 20px;
       border-radius: 12px;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 120px;
+      width: 180px;
+      transition: transform 0.25s ease, background 0.2s;
     }
-    .price-card h3 { margin: 6px 0; font-size: 16px; color: var(--accent-light); }
-    .price { font-weight: 700; font-size: 18px; color: var(--accent); }
 
-    .cta { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 16px; justify-content: center; }
+    .price-card:hover {
+      transform: translateY(-4px);
+      background: rgba(255,255,255,0.06);
+    }
+
+    .price-card h3 {
+      margin: 0;
+      font-size: 16px;
+      color: var(--accent-light);
+    }
+
+    .price {
+      font-weight: 700;
+      font-size: 18px;
+      color: var(--accent);
+      margin-top: 6px;
+    }
+
+    /* --- PRZYCISKI --- */
+    .cta {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      margin-top: 16px;
+      justify-content: center;
+    }
+
     .btn {
-      padding: 10px 14px;
+      padding: 12px 20px;
       border-radius: 10px;
       background: var(--accent);
       color: #fff;
       text-decoration: none;
       font-weight: 600;
-      transition: background 0.2s;
+      transition: all 0.25s ease;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.3);
     }
-    .btn:hover { background: var(--accent-light); }
 
-    .btn.tipply {
-      background: #f97316;
-      color: #fff;
+    .btn:hover {
+      background: var(--accent-light);
+      transform: scale(1.05);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.4);
     }
-    .btn.tipply:hover { background: #fb923c; }
 
+    /* Ghost button (powrót) */
     .btn.ghost {
       background: transparent;
       border: 1px solid rgba(255,255,255,0.2);
       color: var(--muted);
     }
 
-    /* Stopka */
+    .btn.ghost:hover {
+      background: var(--accent);
+      border-color: var(--accent);
+      color: #fff;
+      transform: scale(1.05);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+    }
+
     .footer {
-      margin-top: 40px;
+      margin-top: 20px;
       font-size: 14px;
       color: rgba(241, 245, 249, 0.7);
       text-align: center;
+      /* 🔧 dodane: trochę przestrzeni od dołu */
+      padding-bottom: 20px;
     }
 
-    /* Social media */
     .socials {
       position: fixed;
       bottom: 20px;
@@ -141,6 +225,7 @@
       flex-direction: column;
       gap: 12px;
     }
+
     .socials a {
       display: flex;
       align-items: center;
@@ -151,14 +236,23 @@
       color: #f1f5f9;
       text-decoration: none;
       font-weight: 600;
-      transition: background 0.2s;
+      backdrop-filter: blur(6px);
+      transition: all 0.25s ease;
     }
-    .socials a:hover { background: rgba(255,255,255,0.1); }
-    .socials span { font-size: 18px; }
+
+    .socials a:hover {
+      background: rgba(255,255,255,0.12);
+      transform: translateY(-2px);
+    }
 
     @media (max-width:600px) {
       header { flex-direction: column; align-items: center; }
       .logo img { width: 110px; }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
@@ -166,7 +260,7 @@
   <div class="container">
     <header>
       <div class="logo">
-        <img src="logo.png" alt="Legends Risings Logo">
+        <a href="index.html"><img src="logo.png" alt="Legends Risings Logo"></a>
       </div>
       <div>
         <h1>Legends Risings — Zakupy</h1>
@@ -175,7 +269,7 @@
     </header>
 
     <div class="card">
-      <h2>🛒 Informacja dotycząca zakupów</h2>
+      <h2>🛒 Informacje dotyczące zakupów</h2>
       <div class="methods">
         <div class="method"><span class="emoji">💸</span><strong>BLIK</strong></div>
         <div class="method"><span class="emoji">💳</span><strong>Paysafecard (PSC)</strong></div>
@@ -183,12 +277,13 @@
       </div>
 
       <div class="note">
-       ⚠️ <strong>Wszystkie zakupy muszą być dokonywane odpowiedzialnie. Dbaj o kulturę i przestrzegaj zasad serwera.</strong>
+        ⚠️ <strong>Wszystkie zakupy muszą być dokonywane odpowiedzialnie.</strong><br>
+        Dbaj o kulturę i przestrzegaj zasad serwera.
       </div>
 
       <div class="note">
         ✉️ <strong>W celu dokonania zakupu należy skontaktować się z administracją serwera.</strong><br>
-        <small style="color:var(--muted)">Prosimy o cierpliwość — realizacja zakupu może zająć trochę czasu w zależności od dostępności administracji.</small>
+        <small style="color:var(--muted)">Realizacja może potrwać w zależności od dostępności administracji.</small>
       </div>
 
       <h3>Dostępne rangi</h3>
@@ -198,22 +293,21 @@
         <div class="price-card"><h3>MVIP</h3><div class="price">100 zł</div></div>
         <div class="price-card"><h3>SPONSOR</h3><div class="price">150 zł</div></div>
         <div class="price-card"><h3>PREMIUM</h3><div class="price">200 zł</div></div>
+        <div class="price-card"><h3>LEGENDA</h3><div class="price">250 zł</div></div>
       </div>
 
       <div class="cta">
         <a class="btn" href="https://discord.gg/U7WXRhmKNd" target="_blank" rel="noopener noreferrer">💬 Skontaktuj się z administracją</a>
-        <a class="btn tipply" href="https://tipply.pl/@vemsiak" target="_blank" rel="noopener noreferrer">💰 Tipply</a>
-        <a class="btn ghost" href="index.html">⬅️ Powrót do strony głównej</a>
+        <a class="btn" href="https://tipply.pl/@vemsiak" target="_blank" rel="noopener noreferrer">💰 Tipply</a>
+        <a class="btn ghost" href="index.html">⬅️ Powrót</a>
       </div>
     </div>
   </div>
 
-  <!-- Stopka -->
   <div class="footer">
     ip-legendsrising.pl | wersja 1.21.5+
   </div>
 
-  <!-- Social media -->
   <div class="socials">
     <a href="https://discord.gg/U7WXRhmKNd" target="_blank" rel="noopener noreferrer"><span>💬</span> Discord</a>
     <a href="https://www.youtube.com/@LegendsRisings" target="_blank" rel="noopener noreferrer"><span>▶️</span> YouTube</a>
@@ -221,6 +315,8 @@
   </div>
 </body>
 </html>
+
+
 
 
 
